# playground

langchain-rag/: README.md  package-lock.json  package.json  tsconfig.json
langchain-rag/src/: cli.ts  core.ts  ingestion.ts  llm.ts  main.ts  server.ts
salary-kata/: LOG.md  README.md  pyproject.toml
salary-kata/src/salarykata/: main.py
salary-kata/src/salarykata/db/: __init__.py  database.py
salary-kata/src/salarykata/modules/employees/: __init__.py  entity.py  schemas.py  service.py
salary-kata/src/salarykata/modules/salary/: __init__.py  constants.py  schemas.py  service.py
salary-kata/src/salarykata/routers/: __init__.py  employees.py  salary.py
salary-kata/src/salarykata/shared/: di.py
salary-kata/tests/: conftest.py  test_employees.py  test_salary.py
tokenizer/src/: bpe.py
ts/ball-game/: index.html  package-lock.json  package.json
ts/ball-game/src/: ball.ts  main.ts  maze-generator.ts  style.css
